--- a/js/packages/web/src/styles/index.less
+++ b/js/packages/web/src/styles/index.less
@@ -10,6 +10,7 @@
 @import '../views/auction/index.less';
 @import '../views/art/index.less';
 @import '../views/admin/index.less';
+@import '../views/landingPage/index.less';
 
 @import '../components/AuctionRenderCard/index.less';
 @import '../components/AppBar/index.less';
